Alguns casos de teste endpit promoção - 02
